fixed styling issue when a vertical scrollbar is present

--- a/src/app/Pages/Games/Maplestory/Pages/maplestory-arcane-symbols/maplestory-arcane-symbols.component.css
+++ b/src/app/Pages/Games/Maplestory/Pages/maplestory-arcane-symbols/maplestory-arcane-symbols.component.css
@@ -69,7 +69,7 @@
     }
 }
 
-@media only screen and (max-width: 862px) {
+@media only screen and (max-width: 872px) {
     .editedGamePageContent {
         width: calc(100% - 262px);
     }
