--- a/src/app/Pages/Games/Maplestory/Pages/maplestory-home/maplestory-home.component.css
+++ b/src/app/Pages/Games/Maplestory/Pages/maplestory-home/maplestory-home.component.css
@@ -56,7 +56,7 @@
     }
 }
 
-@media only screen and (max-width: 1061px) {
+@media only screen and (max-width: 1071px) {
     .contentPageOverride {
         width: calc(100% - 262px);
     }
